--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  min-width: 100%;
 }
 
 .description {
