--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -16,11 +16,13 @@
     flex-direction: column;
     align-items:center;
     justify-content: center;
+
+    & [id="clickValue"],
+    & [for="clickValue"]{
+        max-width: 50%;
+    }
 }
-.mainSection [id="clickValue"],
-.mainSection [for="clickValue"]{
-    max-width: 50%;
-}
+
 .bakerSection{
     border:1px solid #FFF;
     width: 100%;
