More store items, CSS fixes

--- a/src/styles/Store.module.scss
+++ b/src/styles/Store.module.scss
@@ -1,6 +1,7 @@
 .storeSection{
-    margin-left:auto;
     border:1px solid #FFF;
-    height: 100vw;
+    height: 90vh;
     padding: 10px;
+    width: 30%;
+    overflow-y: scroll;
 }
