--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -6,12 +6,14 @@
     display:flex;
     flex-direction: row;
     height: 100%;
-    max-height: 100%;
+    max-height: 100vh;
     width: 100%;
+    max-width:100vw;
 }
 .mainSection{
-    max-width:50%;
-    height: 100%;
+    max-width:80%;
+    width: 80%;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -21,13 +23,4 @@
     & [for="clickValue"]{
         max-width: 50%;
     }
-}
-
-.bakerSection{
-    border:1px solid #FFF;
-    width: 100%;
-    display:flex;
-    flex-direction:row;
-    align-items: center;
-    justify-content: center;
 }
