store item icons, store styling

--- a/src/styles/Store.module.scss
+++ b/src/styles/Store.module.scss
@@ -2,6 +2,7 @@
     border:1px solid #FFF;
     height: 90vh;
     padding: 10px;
+    min-width: 300px;
     width: 30%;
     overflow-y: scroll;
 }
