--- a/src/styles/StoreItem.module.scss
+++ b/src/styles/StoreItem.module.scss
@@ -1,13 +1,24 @@
 .storeItem{
     border:1px solid #777;
     padding:5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #222;
+
+    & .storeOptions{
+        width: 100%;
+    }
 
     &:not(:last-child){
         margin-bottom: 10px;
     }
 
     & button{
-        width:100%;
+        width: 100%;
+        min-height: 30px;
     }
 
     & button:not(:last-child){
