--- a/src/styles/StoreItem.module.scss
+++ b/src/styles/StoreItem.module.scss
@@ -8,6 +8,14 @@
     width: 100%;
     background-color: #222;
 
+    & .storeIcon{
+        padding-right: 5px;
+
+        & > img{
+            margin: -5px;
+        }
+    }
+
     & .storeOptions{
         width: 100%;
     }
