--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -1,6 +1,15 @@
 .cookieImg{
     height: 100px;
     width: 100px;
+    transition: transform 200ms;
+
+    &:hover{
+        transform: scale(1.2);
+    }
+
+    &:active{
+        transform: scale(1.1);
+    }
 }
 .gameContent{
     display:flex;
