--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -1,6 +1,5 @@
 .cookieImg{
-    height: 100px;
-    width: 100px;
+
     transition: transform 200ms;
 
     &:hover{
@@ -11,7 +10,7 @@
         transform: scale(1.1);
     }
 }
-.gameContent{
+.gameContent > div{
     display:flex;
     flex-direction: row;
     height: 100%;
