--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -20,6 +20,10 @@
     //max-height: 100vh;
     width: 100%;
     max-width:100vw;
+
+    & button{
+        margin-bottom: 5px;
+    }
 }
 .mainSection{
     max-width:80%;
